[gd_scene load_steps=2 format=3 uid="uid://cyxxjm0hqnu8i"]

[ext_resource type="Script" uid="uid://cndjf2p14c6wj" path="res://scripts/ui_scripts/settings.gd" id="1_o2bc3"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_o2bc3")

[node name="SttngsBttnVBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -29.0
offset_right = 112.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResolutionHBoxContainer" type="HBoxContainer" parent="SttngsBttnVBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="SttngsBttnVBoxContainer/ResolutionHBoxContainer"]
layout_mode = 2
text = "Screen Resolution: "

[node name="ResolutionButton" type="MenuButton" parent="SttngsBttnVBoxContainer/ResolutionHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
flat = false
item_count = 3
popup/item_0/text = "720x480"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2

[node name="MusicVolumeHBoxContainer" type="HBoxContainer" parent="SttngsBttnVBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="SttngsBttnVBoxContainer/MusicVolumeHBoxContainer"]
layout_mode = 2
text = "Music Volume: "

[node name="MusicVolumeSlider" type="HSlider" parent="SttngsBttnVBoxContainer/MusicVolumeHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SFXVolumeHBoxContainer" type="HBoxContainer" parent="SttngsBttnVBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="SFXVolumeLabel" type="Label" parent="SttngsBttnVBoxContainer/SFXVolumeHBoxContainer"]
layout_mode = 2
text = "SFX Volume: "

[node name="SFXVolumeSlider" type="HSlider" parent="SttngsBttnVBoxContainer/SFXVolumeHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="CloseButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = 156.0
offset_right = 25.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
text = "Close"

[connection signal="value_changed" from="SttngsBttnVBoxContainer/MusicVolumeHBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="SttngsBttnVBoxContainer/SFXVolumeHBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
